tests/baselines/reference/parserClassDeclaration14.errors.txt
==== tests/cases/compiler/parserClassDeclaration14.ts (1 errors) ====
    class C {
       foo();
       constructor();
       ~~~~~~~~~~~
!!! parserClassDeclaration14.ts(3,4): error TS2238: Function implementation expected.
    }